# llm-feedback-decompile

./: .dockerignore  .gitignore  Dockerfile  README.md  download_data.py  download_model.py  evaluate.py  generate_dpo_data.py  process_data.py  pyproject.toml  requirements.txt  train_dpo.py  train_sft.py
configs/: dataset.yaml  dpo.yaml  sft.yaml
scripts/: basemodel.py  dataset.py  download_basemodel.py  download_data.py  download_model.py  evaluate.py  extract_data.sh  generate_data.sh  generate_dpo_data.py  generate_sft_data.py  preprocess.py  process_data.py  process_dpo_data.py  process_sft_data.py  train.py  train_dpo.py  train_sft.py
src/: app.py  compiler.py  config.py  llm_utils.py  model_server.py  prompts.py  utils.py
src/static/: index.html  script.js  style.css
