[project]
name = "llm-dev-env"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "tensorboard>=2.20.0",
    "transformers==4.46.3",
    "tensorboardx",
    "huggingface_hub==0.27.0",
    "accelerate==1.0.1",
    "datasets==3.1.0",
    "peft==0.13.2",
    "trl==0.12.0",
    "bitsandbytes==0.45.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "tqdm==4.67.0",
    "pyyaml==6.0.2",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "python-multipart==0.0.17",
    "requests",
    "pycparser",
    "setuptools",
]
