[project]
name = "llm-dev-env"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "tensorboard>=2.20.0",
    "transformers==4.57.6",
    "tensorboardx",
    "huggingface_hub==0.36.2",
    "accelerate==1.12.0",
    "datasets==4.3.0",
    "peft==0.18.1",
    "trl==0.24.0",
    "bitsandbytes==0.49.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "tqdm==4.67.0",
    "pyyaml==6.0.2",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "fastapi==0.129.0",
    "uvicorn==0.40.0",
    "python-multipart>=0.0.18",
    "requests",
    "pycparser",
    "setuptools",
    "unsloth==2026.2.1",
    "vllm==0.15.1",
]
